# TorXakis

./: .travis.yml  stack.yaml  stack_linux.yaml
doc/: doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-F.html  doc-index-P.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html
doc/all/: doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-F.html  doc-index-P.html  doc-index-T.html  doc-index-U.html  doc-index-V.html
doc/behave-0.2.1.0/src/: Behave.html  Equiv.html  Expand.html  Next.html  Reduce.html  Subst.html  Unfold.html
doc/behavedefs-0.2.1.0/src/: BTShow.html  BTree.html
doc/behaveenv-0.1.7.0/src/: EnvBTree.html
doc/cnect-0.1.7.0/src/: EnDecode.html  SocketWorld.html
doc/core-0.2.1.0/src/: CoreUtils.html  Ioco.html  Mapper.html  Purpose.html  Sim.html  Step.html  Test.html  TxsCore.html
doc/coreenv-0.1.7.0/src/: Config.html  EnvCore.html  EnvData.html  ParamCore.html
doc/defs-0.2.1.0/: ChanId.html  CnectId.html  CstrId.html  FreeMonoidX.html  FuncId.html  GoalId.html  MapperId.html  ModelId.html  ProcId.html  Product.html  PurpId.html  SortId.html  SortOf.html  StatId.html  StdTDefs.html  Sum.html  TxsDefs.html  TxsShow.html  TxsUtils.html  VarId.html  defs.haddock  doc-index-A.html  doc-index-All.html  doc-index-C.html  doc-index-D.html  doc-index-F.html  doc-index-P.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  mini_Product.html  mini_Sum.html
doc/defs-0.2.1.0/src/: ConstDefs.html  FreeMonoidX.html  FuncTable.html  Ident.html  Product.html  Sigs.html  SortOf.html  StdTDefs.html  Sum.html  TxsDDefs.html  TxsDefs.html  TxsShow.html  TxsUtils.html  ValExprDefs.html  ValExprImpls.html  XmlFormat.html
doc/front-0.2.1.0/src/: TxsAlex.html
doc/server-0.2.1.0/src/: CmdLineParser.html
doc/serverenv-0.1.7.0/src/: EnvServer.html  IfServer.html  ParamServer.html
doc/solve-0.2.1.0/src/: FreeVar.html  RandIncrementChoice.html  RandPartition.html  RandTrueBins.html  RegexSMTHappy.html  SMT2TXS.html  SMTAlex.html  (+7 more)
sys/front/: front.cabal
sys/ui-ticl/: README.md  ticl.cabal
sys/ui-ticl/app/: Main.hs
sys/ui-ticl/src/: Cmds.hs  CmdsHandler.hs  CmdsParser.hs  Types.hs  UIM.hs
test/sqatt/: stack.yaml
(+17 files in other folders)
